[tool.poetry]
name = "perceptual_load"
version = "0.1.0"
description = ""
authors = ["RobBlumberg <robertblumberg97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
python-semantic-release = "^5.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
